# src/rpiplatesrecognition/rest_api_connexion/swagger.yml
@@ -37,63 +37,15 @@ paths:
                   modules:
                     type: array
                     items:
-                      type: string
-
-
-  /add_module:
-    post:
-      operationId: rpiplatesrecognition.rest_api_connexion.routes.add_module
-      description: Adds module to an user
-      parameters:
-        - in: query
-          name: unique_id
-          schema:
-            type: string
-          description: Module's unique id
-      responses:
-        '201':
-          description: Sucessfully added module to an user
-        '401':
-          description: Module with that unique_id was not found
-        '409':
-          description: Module is already assigned to another user
-
-
-  /remove_module:
-    post:
-      operationId: rpiplatesrecognition.rest_api_connexion.routes.remove_module
-      description: Unbounds modules from current user
-      parameters:
-        - in: query
-          name: unique_id
-          schema:
-            type: string
-          description: Module's unique id
-      responses:
-        '201':
-          description: Sucessfully unbound module from user
-        '404':
-          description: Module not found on server
-        '412':
-          description: Module is not currently bound to user
-
-
-  /create_whitelist:
-    post:
-      operationId: rpiplatesrecognition.rest_api_connexion.routes.create_whitelist
-      description: Creates new whitelist for an user
-      parameters:
-        - in: query
-          name: whitelist_name
-          schema:
-            type: string
-          description: New whitelist name
-      responses:
-        '201':
-          description: Successsfully created whitelist
-        '412':
-          description: Whitelist with such name already exists
-
+                      type: object
+                      properties:
+                        unique_id:
+                          type: string
+                          description: Unique id of a module
+                        whitelists:
+                          type: array
+                          items:
+                            type: string
 
   /get_whitelists:
     get:
@@ -144,3 +96,117 @@ paths:
 
         '404':
           description: No such whitelist exists
+
+
+  /bind_module:
+    post:
+      operationId: rpiplatesrecognition.rest_api_connexion.routes.bind_module
+      description: Adds module to an user
+      parameters:
+        - in: query
+          name: unique_id
+          schema:
+            type: string
+          description: Module's unique id
+      responses:
+        '201':
+          description: Sucessfully added module to an user
+        '401':
+          description: Module with that unique_id was not found
+        '409':
+          description: Module is already assigned to another user
+
+
+  /unbind_module:
+    post:
+      operationId: rpiplatesrecognition.rest_api_connexion.routes.unbind_module
+      description: Unbounds modules from current user
+      parameters:
+        - in: query
+          name: unique_id
+          schema:
+            type: string
+          description: Module's unique id
+      responses:
+        '201':
+          description: Sucessfully unbound module from user
+        '404':
+          description: Module not found on server
+        '412':
+          description: Module is not currently bound to user
+
+
+  /create_whitelist:
+    put:
+      operationId: rpiplatesrecognition.rest_api_connexion.routes.create_whitelist
+      description: Creates new whitelist for an user
+      parameters:
+        - in: query
+          name: whitelist_name
+          schema:
+            type: string
+          description: New whitelist name
+      responses:
+        '201':
+          description: Successsfully created whitelist
+        '412':
+          description: Whitelist with such name already exists
+
+
+  /add_plate_to_whitelist:
+    put:
+      operationId: rpiplatesrecognition.rest_api_connexion.routes.add_plate_to_whitelist
+      description:
+        Adds a plate to an whitelist. If such plate is already bound to a whitelist, does nothing.
+      parameters:
+        - in: query
+          name: whitelist_name
+          schema:
+            type: string
+          description: Whitelist to which assign new plate
+        - in: query
+          name: plate_text
+          schema:
+            type: string
+          description: Plate which should be added
+      responses:
+        '201':
+          description: Successfuly added a plate to whitelist
+        '409':
+          description: Whitelist with such name is not bound to current user
+        '412':
+          description: Plate text is with wrong format
+
+
+  /register:
+    post:
+      operationId: rpiplatesrecognition.rest_api_connexion.routes.register
+      description: Registers new user
+      security: []  # no security
+      requestBody:
+        description: Json object describing user
+        required: true
+        content:
+          application/json:
+            schema:
+              x-body-name: new_user
+              type: object
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
+      responses:
+        '201':
+          description: New user was sucessfully registered
+        '409':
+          description: Username was already taken or password does not comply to policy
+          content:
+            text/plain:
+              schema:
+                type: string
+              examples:
+                username taken:
+                  value: 'Username already taken'
+                password does not comply to policy:
+                  value: 'Password does not comply to policy'
